salesforce-litle-MP/src/objects/LitleMappingsSaveLog__c.object
<CustomObject>
    <description>Object to log saves of the Litle Mapping</description>
    <fields>
        <fullName>legalEntityAnnualCreditCardSalesVolumeD__c</fullName>
        <description>Legal Entity AnnualCreditCardSalesVolumeD</description>
        <label>Default Annual CreditCard Sales Volume</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityAnnualCreditCardSalesVolumeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Annual CreditCard Sales Volume?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityAnnualCreditCardSalesVolume__c</fullName>
        <description>Legal Entity AnnualCreditCardSalesVolume</description>
        <label>SF Annual CreditCard Sales Volume</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCityD__c</fullName>
        <description>Legal Entity CityD</description>
        <label>Default Legal Entity City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCityX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity City?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityCity__c</fullName>
        <description>Legal Entity City</description>
        <label>SF Legal Entity City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityContactPhoneD__c</fullName>
        <description>Legal Entity ContactPhoneD</description>
        <label>Default Legal Entity ContactPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityContactPhoneX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity ContactPhone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityContactPhone__c</fullName>
        <description>Legal Entity ContactPhone</description>
        <label>SF Legal Entity ContactPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCountryCodeD__c</fullName>
        <description>Legal Entity CountryCodeD</description>
        <label>Default Legal Entity CountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityCountryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity CountryCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityCountryCode__c</fullName>
        <description>Legal Entity CountryCode</description>
        <label>SF Legal Entity CountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDateOfBirthD__c</fullName>
        <description>Legal Entity DateOfBirthD</description>
        <label>Default Legal Entity DOB</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDateOfBirthX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity DOB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityDateOfBirth__c</fullName>
        <description>Legal Entity DateOfBirth</description>
        <label>SF Legal Entity DOB</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDoingBusinessAsD__c</fullName>
        <description>Legal Entity DoingBusinessAsD</description>
        <label>Default Legal Entity DoingBusinessAs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityDoingBusinessAsX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity DoingBusinessAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityDoingBusinessAs__c</fullName>
        <description>Legal Entity DoingBusinessAs</description>
        <label>SF Legal Entity DoingBusinessAs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityFirstNameD__c</fullName>
        <description>Legal Entity FirstNameD</description>
        <label>Default Legal Entity FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityFirstNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity FirstName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityFirstName__c</fullName>
        <description>Legal Entity FirstName</description>
        <label>SF Legal Entity FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityHasAcceptedCreditCardsD__c</fullName>
        <description>Legal Entity HasAcceptedCreditCardsD</description>
        <label>Default Legal Entity HasAcceptedCCs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityHasAcceptedCreditCardsX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity HasAcceptedCCs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityHasAcceptedCreditCards__c</fullName>
        <description>Legal Entity HasAcceptedCreditCards</description>
        <label>SF Legal Entity HasAcceptedCCs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityLastNameD__c</fullName>
        <description>Legal Entity LastNameD</description>
        <label>Default Legal Entity LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityLastNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity LastName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityLastName__c</fullName>
        <description>Legal Entity LastName</description>
        <label>SF Legal Entity LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityNameD__c</fullName>
        <description>Legal Entity NameD</description>
        <label>Default Legal Entity Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity Name?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityName__c</fullName>
        <description>Legal Entity Name</description>
        <label>SF Legal Entity Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPostalCodeD__c</fullName>
        <description>Legal Entity PostalCodeD</description>
        <label>Default Legal Entity PostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPostalCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity PostalCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPostalCode__c</fullName>
        <description>Legal Entity PostalCode</description>
        <label>SF Legal Entity PostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCityD__c</fullName>
        <description>Legal Entity CityD</description>
        <label>Default Principal City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCityX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal City?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCity__c</fullName>
        <description>Legal Entity City</description>
        <label>SF Principal City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalContactPhoneD__c</fullName>
        <description>Legal Entity ContactPhoneD</description>
        <label>Default Principal ContactPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalContactPhoneX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal ContactPhone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalContactPhone__c</fullName>
        <description>Legal Entity ContactPhone</description>
        <label>SF Principal ContactPhone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCountryCodeD__c</fullName>
        <description>Legal Entity CountryCodeD</description>
        <label>Default Principal CountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCountryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal CountryCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalCountryCode__c</fullName>
        <description>Legal Entity CountryCode</description>
        <label>SF Principal CountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDateOfBirthD__c</fullName>
        <description>legal Entity Principal Date Of Birth Default</description>
        <label>Default Principal DOB</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDateOfBirthX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal DOB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDateOfBirth__c</fullName>
        <description>Legal Entity Principal DateOfBirth</description>
        <label>SF Principal DOB</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseD__c</fullName>
        <description>Legal Entity Principal DriversLicenseD</description>
        <label>Default Principal DL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseStateD__c</fullName>
        <description>Legal Entity Principal DriversLicenseStateD</description>
        <label>Default Principal DL State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseStateX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal DL State?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseState__c</fullName>
        <description>Legal Entity Principal DriversLicenseState</description>
        <label>SF Principal DL State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicenseX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal DL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalDriversLicense__c</fullName>
        <description>Legal Entity Principal DriversLicense</description>
        <label>SF Principal DL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalEmailAddressD__c</fullName>
        <description>Legal Entity Principal EmailAddressD</description>
        <label>Default Principal EmailAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalEmailAddressX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal EmailAddress?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalEmailAddress__c</fullName>
        <description>Legal Entity Principal EmailAddress</description>
        <label>SF Principal EmailAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalFirstNameD__c</fullName>
        <description>Legal Entity Principal FirstNameD</description>
        <label>Default Principal FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalFirstNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal FirstName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalFirstName__c</fullName>
        <description>Legal Entity Principal FirstName</description>
        <label>SF Principal FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalLastNameD__c</fullName>
        <description>Legal Entity Principal LastNameD</description>
        <label>Default Principal LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalLastNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal LastName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalLastName__c</fullName>
        <description>Legal Entity Principal LastName</description>
        <label>SF Principal LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalPostalCodeD__c</fullName>
        <description>Legal Entity PostalCodeD</description>
        <label>Default Principal PostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalPostalCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal PostalCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalPostalCode__c</fullName>
        <description>Legal Entity PostalCode</description>
        <label>SF Principal PostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalSsnD__c</fullName>
        <description>Legal Entity Principal SsnD</description>
        <label>Default Principal Ssn</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalSsnX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal Ssn?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalSsn__c</fullName>
        <description>Legal Entity Principal Ssn</description>
        <label>SF Principal Ssn</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStateProvinceD__c</fullName>
        <description>Legal Entity StateProvinceD</description>
        <label>Default Principal StateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStateProvinceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal StateProvince?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStateProvince__c</fullName>
        <description>Legal Entity StateProvince</description>
        <label>SF Principal StateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress1D__c</fullName>
        <description>Legal Entity StreetAddress1D</description>
        <label>Default Principal StreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress1X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal StreetAddress1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress1__c</fullName>
        <description>Legal Entity StreetAddress1</description>
        <label>SF Principal StreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress2D__c</fullName>
        <description>Legal Entity StreetAddress2D</description>
        <label>Default Principal StreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress2X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Principal StreetAddress2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityPrincipalStreetAddress2__c</fullName>
        <description>Legal Entity StreetAddress2</description>
        <label>SF Principal StreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStateProvinceD__c</fullName>
        <description>Legal Entity StateProvinceD</description>
        <label>Default Legal Entity StateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStateProvinceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity StateProvince?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityStateProvince__c</fullName>
        <description>Legal Entity StateProvince</description>
        <label>SF Legal Entity StateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress1D__c</fullName>
        <description>Legal Entity StreetAddress1D</description>
        <label>Default Legal Entity StreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress1X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity StreetAddress1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress1__c</fullName>
        <description>Legal Entity StreetAddress1</description>
        <label>SF Legal Entity StreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress2D__c</fullName>
        <description>Legal Entity StreetAddress2D</description>
        <label>Default Legal Entity StreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress2X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity StreetAddress2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityStreetAddress2__c</fullName>
        <description>Legal Entity StreetAddress2</description>
        <label>SF Legal Entity StreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTaxIdD__c</fullName>
        <description>Legal Entity TaxIdD</description>
        <label>Default Legal Entity TaxId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTaxIdX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity TaxId?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityTaxId__c</fullName>
        <description>Legal Entity TaxId</description>
        <label>SF Legal Entity TaxI</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTypeD__c</fullName>
        <description>Legal Entity TypeD</description>
        <label>Default Legal Entity Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityTypeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Legal Entity Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEntityType__c</fullName>
        <description>Legal Entity Type</description>
        <label>SF Legal Entity Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>litleEnvironment__c</fullName>
        <description>Stores the environment for MP</description>
        <label>Litle Environment</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merchantPassword__c</fullName>
        <description>password used to connect to make litle request</description>
        <label>Merchant Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>merchantUsername__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Merchant username for Litle requests</description>
        <label>Merchant Username</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>subMerchantAmexMidD__c</fullName>
        <description>Sub Merchant AmexMidD</description>
        <label>Default SubMerchant AmexMid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantAmexMidX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant AmexMid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantAmexMid__c</fullName>
        <description>Sub Merchant AmexMid</description>
        <label>SF SubMerchant AmexMid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankAccountNumberD__c</fullName>
        <description>Sub Merchant BankAccountNumberD</description>
        <label>Default SubMerchant BankAccountNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankAccountNumberX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant BankAccountNumber?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantBankAccountNumber__c</fullName>
        <description>Sub Merchant BankAccountNumber</description>
        <label>SF SubMerchant BankAccountNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankRoutingNumberD__c</fullName>
        <description>Sub Merchant BankRoutingNumberD</description>
        <label>Default SubMerchant BankRoutingNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantBankRoutingNumberX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant BankRoutingNumber?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantBankRoutingNumber__c</fullName>
        <description>Sub Merchant BankRoutingNumber</description>
        <label>SF SubMerchant BankRoutingNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCityD__c</fullName>
        <description>Sub Merchant CityD</description>
        <label>Default SubMerchant City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCityX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant City?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCity__c</fullName>
        <description>Sub Merchant City</description>
        <label>SF SubMerchant City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCountryCodeD__c</fullName>
        <description>Sub Merchant CountryCodeD</description>
        <label>Default SubMerchant CountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCountryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant CountryCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCountryCode__c</fullName>
        <description>Sub Merchant CountryCode</description>
        <label>SF SubMerchant CountryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCreateCredentialsD__c</fullName>
        <description>Sub Merchant CreateCredentialsD</description>
        <label>Default SubMerchant CreateCredentials</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCreateCredentialsX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant CreateCredentials?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCreateCredentials__c</fullName>
        <description>Sub Merchant CreateCredentials</description>
        <label>SF SubMerchant CreateCredentials</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCustomerServiceNumberD__c</fullName>
        <description>Sub Merchant CustomerServiceNumberD</description>
        <label>Default CustomerServiceNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantCustomerServiceNumberX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default CustomerServiceNumber?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantCustomerServiceNumber__c</fullName>
        <description>Sub Merchant CustomerServiceNumber</description>
        <label>SF CustomerServiceNumber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantDiscoverConveyMidD__c</fullName>
        <description>Sub Merchant DiscoverConveyMidD</description>
        <label>Default SubMerchant DiscoverConveyMid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantDiscoverConveyMidX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant DiscoverConveyMid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantDiscoverConveyMid__c</fullName>
        <description>Sub Merchant DiscoverConveyMid</description>
        <label>SF SubMerchant DiscoverConveyMid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantEmailAddressD__c</fullName>
        <description>Sub Merchant EmailAddressD</description>
        <label>Default SubMerchant EmailAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantEmailAddressX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant EmailAddress?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantEmailAddress__c</fullName>
        <description>Sub Merchant EmailAddress</description>
        <label>SF SubMerchant EmailAddress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantFirstNameD__c</fullName>
        <description>Sub Merchant FirstNameD</description>
        <label>Default SubMerchant FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantFirstNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant FirstName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantFirstName__c</fullName>
        <description>Sub Merchant FirstName</description>
        <label>SF SubMerchant FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantHardCodeBillingDescD__c</fullName>
        <description>Sub Merchant HardCodeBillingDescriptorD</description>
        <label>Default HardCodeBillingDescriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantHardCodeBillingDescriptorX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default HardCodeBillingDescriptor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantHardCodeBillingDescriptor__c</fullName>
        <description>Sub Merchant HardCodeBillingDescriptor</description>
        <label>SF HardCodeBillingDescriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantLastNameD__c</fullName>
        <description>Sub Merchant LastNameD</description>
        <label>Default SubMerchant LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantLastNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant LastName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantLastName__c</fullName>
        <description>Sub Merchant LastName</description>
        <label>SF SubMerchant LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMaxTransactionAmountD__c</fullName>
        <description>Sub Merchant MaxTransactionAmountD</description>
        <label>Default MaxTransactionAmount</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMaxTransactionAmountX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default MaxTransactionAmount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantMaxTransactionAmount__c</fullName>
        <description>Sub Merchant MaxTransactionAmount</description>
        <label>SF MaxTransactionAmount</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantCategoryCodeD__c</fullName>
        <description>Sub Merchant MerchantCategoryCodeD</description>
        <label>Default MerchantCategoryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantCategoryCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default MerchantCategoryCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantCategoryCode__c</fullName>
        <description>Sub Merchant MerchantCategoryCode</description>
        <label>SF MerchantCategoryCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantNameD__c</fullName>
        <description>Sub Merchant MerchantNameD</description>
        <label>Default SubMerchant MerchantName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant MerchantName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantMerchantName__c</fullName>
        <description>Sub Merchant MerchantName</description>
        <label>SF SubMerchant MerchantName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPhoneD__c</fullName>
        <description>Sub Merchant PhoneD</description>
        <label>Default SubMerchant Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPhoneX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant Phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantPhone__c</fullName>
        <description>Sub Merchant Phone</description>
        <label>SF SubMerchant Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPostalCodeD__c</fullName>
        <description>Sub Merchant PostalCodeD</description>
        <label>Default SubMerchant PostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPostalCodeX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant PostalCode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantPostalCode__c</fullName>
        <description>Sub Merchant PostalCode</description>
        <label>SF SubMerchant PostalCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPspMerchantIdD__c</fullName>
        <description>Sub Merchant PspMerchantIdD</description>
        <label>Default SubMerchant PspMerchantId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantPspMerchantIdX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant PspMerchantId?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>